css/main.css
/* ... */
.nav-bar-item.color-transform {
    transition: .4s ease-in-out;
}

.nav-bar-item.color-transform:hover {
    color: var(--primary);
    background: white;
}

.nav-bar-text {
    position: relative;
    top: 15px;
}

.nav-bar-item.right {
    float: right;
}

.nav-bar-item#sidebar-btn {
    padding: 5px;
    position: relative;
}

.hamburger-x div {
    display: block;
    position: absolute;
    left: 12px;
    right: 12px;
    height: 4px;
    background: white;
    transition: .2s ease-in-out;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
}

.hamburger-x .top {
    top: 10px;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    z-index: 4;
}

.hamburger-x .mid {
    top: 22px;
    opacity: 1;
}

.hamburger-x .bot {
    bottom: 21px;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
    z-index: 3s;
}

.hamburger-x .top.open {
    transform: translateY(12.5px) rotate(45deg);
    border-radius: 0;
}

.hamburger-x .mid.open {
    opacity: 0;
}

.hamburger-x .bot.open {
    transform: translateY(-12.5px) rotate(-45deg);
    border-radius: 0;
}


/*nav-bar==================================================================*/

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    font-size: 1em;
    font-weight: 400;
    color: rgb(233, 233, 233);
    background-color: #f5f5f5;
}

#navigation {
    top: 0;
    margin: auto;
    float: left;
    display: block;
    width: 100%;
    background-color: var(--nav);
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin-bottom: 25px;
}

#navigation div {
    padding: 20px;
}

#sidebarbtn {
    text-shadow: 0 0 0 rgba(0, 0, 0, 0);
    transition-duration: .4s;
}

#sidebarbtn:hover {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, .3);
}

.centerTextHorz {
    text-align: center;
}

.holder {
    float: left;
}

.large {
    font-size: 2em;
}

#cards {
    position: relative;
    width: 100%;
    float: left;
    margin-top: 75px;
    text-align: center;
}

.card {
    position: relative;
    display: inline-block;
    margin: 10px;
    background-color: #fff;
    color: #222;
    height: 300px;
    width: 300px;
    border-radius: 5px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition-duration: .4s;
    vertical-align: middle;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
    height: 320px;
    width: 320px;
    margin: 0;
}

.card h1 {
    font-weight: 400;
}

.cardArrow {
    position: relative;
    top: 100px;
    color: white;
    opacity: 0;
    transition-duration: .4s;
}

@keyframes pulse {
    0% {
        opacity: .9;
    }
    100% {
        opacity: .1;
    }
}

.pulse {
    animation-name: pulse;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

.overlay::-webkit-scrollbar {
    display: none;
}

.content {
    position: relative;
    display: block;
    top: 50px;
    width: 100%;
}

.content .fill {
    position: absolute;
    top: 50%;
    left: 50%;
    min-height: 500px;
    display: block;
    background-color: #fff;
    color: #222;
    width: 90%;
    border-radius: 5px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transform: translateX(-50%) translateY(40px);
    margin-bottom: 15px;
}

.left-align {
    text-align: left;
}

.card img {
    position: absolute;
    width: 100%;
    border-radius: 5px;
    z-index: 1;
    display: block;
}

.overlay {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    opacity: 0;
    border-radius: 5px;
    transition-duration: .4s;
    z-index: 2;
    position: absolute;
    overflow: auto;
}

.overlay:hover {
    opacity: 1;
}

.title {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding-top: 70px;
    color: white;
}

.description {
    font-size: .75em;
    color: #d9d9d9;
    position: relative;
    top: -50px;
    margin-bottom: 10%;
}

#sidebar {
    color: #111;
    margin-top: 50px;
    margin-left: -300px;
    position: fixed;
    height: 100%;
    width: 300px;
    background-color: #E5E5E5;
    z-index: 3;
    transition: .2s ease-in-out;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

#sidebar.open {
    margin-left: 0;
}

#sidebar-content {
    margin-top: 0px;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: .4s;
    background-color: #E5E5E5;
    font-size: 1.25em;
    text-align: left;
    overflow: auto;
    margin-bottom: 50px;
}

#sidebar-content .sidebar-item {
    left: 0px;
    position: relative;
    cursor: pointer;
    padding: 5px;
    padding-left: 23px;
    transition-duration: .4s;
    color: #555;
    height: 30px;
}

#sidebar-content .sidebar-item:hover {
    background-color: #AAA;
    color: #E5E5E5;
}

#sidebar-content .sidebar-text {
    position: relative;
    top: 1px;
    left: 15px;
    font-size: 25px;
    font-weight: 200;
}

#sidebar-content .line {
    position: absolute;
    display: block;
    left: 20px;
    right: 20px;
    background: var(--divider);
    height: 2px;
    transform: translateY(15px);
}

#sidebar-content .positionfix {
    margin-top: 32px;
}

#sidebar-content .positionfix2 {
    margin-top: 50px;
}

#sidebar-content .friend-img {
    position: relative;
    display: block;
    width: 30px;
    height: 30px;
    background: grey;
    border-radius: 15px;
    float: left;
}

#sidebar-content .online .friend-img {
    box-shadow: inset 0 0 0 2px rgba(57, 210, 58, 0.5);
}

#sidebar-content .friend-name {
    position: relative;
    left: 20px;
    top: 3px;
}
/* ... */

